--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://examplesite.com"
+baseURL = "https://JulianEscobar.github.io/"
 title = "Julian Escobar | Portfolio"
 theme = "somrat"
 # post pagination
