--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = public
 	url = https://github.com/julaxe/JulianEscobar.github.io.git
 	branch = main
+[submodule "build"]
+	path = build
+	url = https://github.com/julaxe/julaxe.github.io.git
+	branch = main
